WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284814
[DEBUG] ASSERTION FAILED: m_associatedResources.isEmptyIgnoringNullReferences()
https://bugs.webkit.org/show_bug.cgi?id=284814
Summary
[DEBUG] ASSERTION FAILED: m_associatedResources.isEmptyIgnoringNullReferences()
Przemyslaw Gorszkowski
Reported
2024-12-17 06:33:18 PST
It happens when we play a regular video(mp4) and WPE_SHELL_DISABLE_MEDIA_DISK_CACHE=1 and do a seek. ASSERTION FAILED: m_associatedResources.isEmptyIgnoringNullReferences() /app/webkit/Source/WebCore/loader/cache/CachedResourceClient.cpp(36) : virtual WebCore::CachedResourceClient::~CachedResourceClient() 1 0x7127b0b3fd25 WebCore::CachedResourceClient::~CachedResourceClient() 2 0x7127ae5e2330 WebCore::CachedRawResourceClient::~CachedRawResourceClient() 3 0x7127b0a70cf0 WebCore::MediaResource::~MediaResource() 4 0x7127b0a70d34 WebCore::MediaResource::~MediaResource() 5 0x7127a8869d92 WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::PlatformMediaResource, (WTF::DestructionThread)0>::deref() const::{lambda()#1}::operator()() const 6 0x7127a8869e9a WTF::ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<WebCore::PlatformMediaResource, (WTF::DestructionThread)0>::deref() const 7 0x7127a97f2ab7 WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource>::derefIfNotNull(WebCore::PlatformMediaResource*) 8 0x7127a97e3bd4 WTF::RefPtr<WebCore::PlatformMediaResource, WTF::RawPtrTraits<WebCore::PlatformMediaResource>, WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource> >::~RefPtr() 9 0x7127a981340f WTF::RefPtr<WebCore::PlatformMediaResource, WTF::RawPtrTraits<WebCore::PlatformMediaResource>, WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource> >::operator=(WTF::RefPtr<WebCore::PlatformMediaResource, WTF::RawPtrTraits<WebCore::PlatformMediaResource>, WTF::DefaultRefDerefTraits<WebCore::PlatformMediaResource> >&&) 10 0x7127b1405958 operator() 11 0x7127b140dc6c call 12 0x7127a823f4ab WTF::Function<void ()>::operator()() const 13 0x7127ac3f1067 WTF::RunLoop::performWork() 14 0x7127ac56d530 operator() 15 0x7127ac56d554 _FUN 16 0x7127ac56d4a7 operator() 17 0x7127ac56d4f5 _FUN 18 0x71279a1fdd36 g_main_context_dispatch 19 0x71279a25b2b8 g_main_context_iterate.isra.0 20 0x71279a1fd3ff g_main_loop_run 21 0x7127ac56dbb4 WTF::RunLoop::run() 22 0x7127a9cd60e5 WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) 23 0x7127a9cd58d0 int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) 24 0x7127a9cd52b0 WebKit::WebProcessMain(int, char**) 25 0x5c9e7f7c28c9 main 26 0x71279995208a __libc_start_call_main 27 0x71279995214b __libc_start_main 28 0x5c9e7f7c27e5 _start
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2024-12-17 06:42:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38073
EWS
Comment 2
2024-12-17 22:38:11 PST
Committed
287989@main
(aba282581bdd): <
https://commits.webkit.org/287989@main
> Reviewed commits have been landed. Closing PR #38073 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-17 22:39:12 PST
<
rdar://problem/141664140
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug