[DEBUG] ASSERTION FAILED: m_associatedResources.isEmptyIgnoringNullReferences(). https://bugs.webkit.org/show_bug.cgi?id=284814

Reviewed by Philippe Normand.

With debug build, when we do a seek during playing the regular video(mp4)
and WPE_SHELL_DISABLE_MEDIA_DISK_CACHE=1 there is an assert:
ASSERTION FAILED: m_associatedResources.isEmptyIgnoringNullReferences().

To solve it, we need to remove MediaResource from the associated resources
on destruction of MediaResouce.

* Source/WebCore/loader/MediaResourceLoader.cpp:
(WebCore::MediaResource::~MediaResource):

Canonical link: https://commits.webkit.org/287989@main