Source/WebCore/loader/MediaResourceLoader.cpp
@@ -215,6 +215,8 @@ MediaResource::~MediaResource()
 {
     assertIsMainThread();
 
+    if (m_resource)
+        protectedResource()->removeClient(*this);
     protectedLoader()->removeResource(*this);
 }
 
